fixed dispatch form and footer overflow

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -147,7 +147,6 @@
 .anwesha_text{
     display: flex;
     height: 9vh;
-    width: 17vw;
     padding: 4px;
     margin: 10px;
     /* margin-top: 4px; */
