--- a/styles/comingsoon.module.css
+++ b/styles/comingsoon.module.css
@@ -291,7 +291,7 @@
 .newsletter {
   margin: 0 auto;
   /* width: 80%; */
-  height: 350px;
+  height: 381px;
   border-radius: 3px;
   position: relative;
   background-color: #fff6a5;
